--- a/search/index.html
+++ b/search/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-page_title: Search
-permalink: /search/
+layout: page
+title: Search
+permalink: /search/ <!--url어떻게-->
 ---
 
 <div id="results">
