--- a/search/index.html
+++ b/search/index.html
@@ -1,21 +1,23 @@
 ---
 layout: page
 title: Search
-permalink: /search/ <!--url어떻게-->
+permalink: /search/
 ---
 
+<!--
 <div id="results">
-	<h1></h1>
-	<ul class="results"></ul>
+  <h1></h1>
+  <ul class="results"></ul>
 </div>
+-->
 
 <div id="search-container">
-	<input type="text" id="search-input" placeholder="검색어 입력">
-	<ul id="results-container"></ul>
+  <input type="text" placeholder="Search" class="search">
+  <ul id="results-container"></ul>
 </div>
 
 <!-- Script pointing to jekyll-search.js -->
-<script src="{{ site.baseur l}}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
 
 <script type="text/javascript">
       SimpleJekyllSearch({
