--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,7 @@ permalink: /search/
 -->
 
 <div id="search-container">
-  <input type="text" placeholder="Search" class="search">
+  <input type="text" id="search-input" placeholder="Search" class="search">
   <ul id="results-container"></ul>
 </div>
 
